fix overflow scrolling

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,11 +1,12 @@
 #app {
-  min-height: 95vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+    min-height: 95vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow-x: hidden;
 }
 
 img {
-  object-fit: cover;
+    object-fit: cover;
 }
